fix: envia credenciais de autenticação nas requisições fetch
Adicionado credentials: 'include' no login e nas chamadas de busca de dados para manter a sessão ativa.